Updated Build Scripts to allow for automatic version handling